gcc/testsuite/rust/rustc/ui/underscore-ident-matcher.rs
macro_rules! identity {
    ($i: ident) => (
        $i
    )
}

fn main() {
    let identity!(_) = 10; // { dg-error "" "" { target *-*-* } }
}

